# keyword-intelligence-pipeline

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py  sample_test_file.xlsx  verify_grok.py  verify_openrouter.py
.github/workflows/: ci.yml
docs/: README.md  architecture.md  decision-log.md  execution.md  plugins.md  roadmap.md
examples/: demo_dataset.csv
keyword_intelligence/: __init__.py  constants.py  metadata.py
keyword_intelligence/ai_intelligence/: cache.py  config.py  engine.py  executor.py  models.py  registry.py
keyword_intelligence/ai_intelligence/components/: parsing.py  prompts.py  scoring.py
keyword_intelligence/ai_intelligence/providers/: base.py  gemini.py  mock.py  ollama.py  openrouter.py
keyword_intelligence/business_context/: __init__.py  cache.py  engine.py  enricher.py  extractor.py  filter.py  generator.py  llm_enricher.py  models.py  normalizer.py  resolvers.py  rule_engine.py  validator.py
keyword_intelligence/business_context/collectors/: __init__.py  base.py  website.py
keyword_intelligence/business_context/extractors/: __init__.py  base.py  headings.py  navigation.py  schema.py  url.py
keyword_intelligence/column_resolver/: __init__.py  exceptions.py  models.py  resolver.py
keyword_intelligence/config/: __init__.py  column_aliases.yaml  logging_config.py  settings.py
keyword_intelligence/core/: __init__.py  bootstrap.py  constants.py  container.py  exceptions.py  logger.py  plugins.py
keyword_intelligence/decision/: engine.py  models.py
keyword_intelligence/duplicate_detection/: canonicalization.py  config.py  engine.py  models.py  pipeline.py  registry.py  scorer.py
keyword_intelligence/duplicate_detection/strategies/: base.py  blocking.py  exact.py  fuzzy.py  normalized.py  semantic_placeholder.py
keyword_intelligence/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  export_manager.py  json_exporter.py
keyword_intelligence/input_loader/: __init__.py  exceptions.py  loader.py
keyword_intelligence/interfaces/: api_runner.py  batch_runner.py  cli_runner.py  streamlit_runner.py
keyword_intelligence/models/: __init__.py  base.py  pipeline.py
keyword_intelligence/normalization/: __init__.py  dictionary.py  engine.py  models.py  strategies.py
keyword_intelligence/observability/: events.py  health.py  metrics.py  tracing.py
keyword_intelligence/persistence/: __init__.py  repositories.py
keyword_intelligence/pipeline/: __init__.py  cache.py  context.py  events.py  orchestrator.py  pipeline.py  progress.py  registry.py  stage.py
keyword_intelligence/pipeline/stages/: __init__.py  ai_classification.py  business_context.py  decision.py  duplicate.py  final_classification.py  loader.py  normalization.py  preprocessor.py  reporting.py  search_volume.py  validator.py
keyword_intelligence/reporting/: __init__.py  analytics.py  config.py  engine.py  models.py  registry.py
keyword_intelligence/reporting/exporters/: __init__.py  base.py  csv.py  excel.py  json.py
keyword_intelligence/reporting/templates/: __init__.py  executive.py  summary.py  technical.py
keyword_intelligence/search_volume/: cache.py  config.py  engine.py  executor.py  models.py  registry.py
keyword_intelligence/search_volume/providers/: base.py  mock.py  placeholder_dataforseo.py  placeholder_google_ads.py
keyword_intelligence/services/: __init__.py  base.py
keyword_intelligence/ui/: __init__.py  app.py  dashboard.py
keyword_intelligence/ui/services/: __init__.py  pipeline_runner.py  session.py
keyword_intelligence/ui/themes/: __init__.py  theme.py
keyword_intelligence/utils/: __init__.py  helpers.py
scripts/: format.ps1  generate_fixtures.py  lint.ps1  run.ps1  setup.ps1  test.ps1
tests/: __init__.py  conftest.py  test_ai_classification.py  test_ai_intelligence.py  test_benchmark.py  test_business_context.py  test_column_resolver.py  test_decision_engine.py  test_duplicate_detection.py  test_input_loader.py  test_integration.py  test_normalization.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_pipeline_integration.py  test_reporting.py  test_search_volume.py  test_settings.py  test_smoke.py  test_ui.py
tests/fixtures/: duplicate_rows.csv  empty.csv  invalid_extension.txt  malformed.csv  missing_column.csv  unicode.csv  valid.csv  valid.xlsx
tests/integration/: test_business_context.py
