# ============================================================================
# Keyword Intelligence Pipeline — Project Configuration
# ============================================================================

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "keyword-intelligence-pipeline"
version = "0.1.0"
description = "An AI-powered keyword intelligence pipeline for automated keyword analysis, clustering, and strategic content recommendations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Keyword Intelligence Team"},
]
keywords = ["keyword", "intelligence", "pipeline", "ai", "seo"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/your-org/keyword-intelligence-pipeline"
Documentation = "https://github.com/your-org/keyword-intelligence-pipeline/tree/main/docs"

# ============================================================================
# Tool Configuration
# ============================================================================

# --- Black (Formatter) ---
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

# --- Ruff (Linter) ---
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["keyword_intelligence", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
]
ignore = [
    "D100",   # Missing docstring in public module (handled at package level)
    "D104",   # Missing docstring in public package
    "D203",   # One blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary on second line (conflicts with D212)
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "E501",   # Line too long
    "D102",   # Missing docstring in public method
    "D107",   # Missing docstring in __init__
    "D103",   # Missing docstring in public function
    "ANN201", # Missing return type annotation for public function
    "F841",   # Local variable is assigned to but never used
    "RUF059", # Unpacked variable is never used
    "RUF043", # Pattern passed to match= contains metacharacters
    "N806",   # Variable in function should be lowercase
    "W291",   # Trailing whitespace
    "SIM102", # Use a single if statement instead of nested
    "ANN202", # Missing return type annotation for private function
    "UP042",  # Class inherits from both str and Enum
    "UP046",  # Generic class uses Generic subclass instead of type parameters
    "B904",   # Within an except clause, raise exceptions with raise ... from err
    "B007",   # Loop control variable not used within loop body
    "B024",   # Abstract base class but has no abstract methods
    "B027",   # Empty method in abstract base class but no abstract decorator
    "RUF012", # Mutable default value for class attribute
]

[tool.ruff.lint.isort]
known-first-party = ["keyword_intelligence"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # Docstrings not required in tests
    "ANN",    # Type annotations relaxed in tests
]

# --- MyPy (Type Checker) ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "keyword_intelligence.core.plugins",
    "keyword_intelligence.business_context.validator",
    "keyword_intelligence.ai_intelligence.components.parsing",
    "keyword_intelligence.business_context.extractor",
    "keyword_intelligence.business_context.enricher",
    "keyword_intelligence.ai_intelligence.engine",
    "keyword_intelligence.business_context.collectors.website",
    "keyword_intelligence.core.bootstrap",
    "keyword_intelligence.core.container",
    "keyword_intelligence.business_context.extractors.url",
    "keyword_intelligence.business_context.extractors.navigation"
]
ignore_errors = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "smoke: Smoke tests for basic functionality",
    "settings: Configuration and settings tests",
    "slow: Tests that take a long time to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# --- Coverage ---
[tool.coverage.run]
source = ["keyword_intelligence"]
omit = [
    "keyword_intelligence/ui/*",
    "keyword_intelligence/services/base.py",
    "keyword_intelligence/pipeline/context.py",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
